fix(blog) display facets correctly on mobile

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_blog.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_blog.scss
@@ -214,3 +214,11 @@ body.blog .article-wrap header img {
   -o-object-fit: cover;
   object-fit: cover;
 }
+
+@include media-breakpoint-down(sm) {
+  body.blog #categorii {
+    display: block;
+    margin-bottom: 15px;
+    height: unset;
+  }
+}
